Troubleshooting Layout Issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -141,6 +141,7 @@ a {
 .list {
   list-style: none;
   padding-left: 0;
+  
 }
 
 .list--inline .list__item {
@@ -207,7 +208,7 @@ a {
   font-size: 1.8rem;
   font-weight: 600;
   margin: 1rem 0;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   text-align: center;
   text-transform: uppercase;
   white-space: nowrap;
@@ -298,6 +299,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
+  width: 0;
 }
 
 .input-group .btn {
@@ -741,6 +743,7 @@ a {
 }
 
 .block-domain__prices {
+  color: var(--color-heading);
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 6rem);
